--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+ 
 * {
-    font-family: 'inter';
+    font-family: 'Roboto', sans-serif;
+
     margin: 0;
     padding: 0;
 
@@ -7,7 +9,7 @@
 
 .container {
     background: #7C3AED;
-    height: 100vh;
+    height: 200vh;
     width: 100%;
 }
 
@@ -24,15 +26,16 @@
 
     background: #FBFAFF;
      
-    height: 100vh;
-    width: 100%;
+    height: fit-content;
+    width: 100vw;
+    max-width: 1120px;
 
     position: absolute; 
     left: 175px;
     top: 4px; 
 
     padding: 48px 32px 48px 32px;
-    border-radius: 32px 0px 0px 0px;
+    border-radius: 32px 0 0px 32px;
     
 }
 
@@ -44,6 +47,7 @@
 .menu-item{
     margin-top: 3rem;
      display: flex;
+     cursor: pointer;
      
 }
 
@@ -56,4 +60,139 @@
     margin-left: 1.0rem;
     color: #fff;
     font-weight: 700px;
+}
+
+
+.cabecalho {
+    margin-right: 56px; 
+    display: flex; 
+    align-items: center; 
+    flex-direction: row; /* eixo principal  ---- column: para horizontal; */
+    justify-content: space-between;
+}
+
+ 
+
+.cabecalho p {
+
+    font-family: "Inter";
+    font-size: 32px;
+    font-weight: 700; 
+    text-align: left;
+    color: #403937;
+     
+}
+
+
+.filtros {
+    display: flex;
+    margin-top: 32px;
+    gap: 16px;
+}
+
+.filtros .btn-filter {
+    display: flex; 
+    align-items: center;
+    gap: 10px;
+    color: #fff;
+    border: none;
+    background-color: #7C3AED;
+    height: 55px;
+    width: 135px;
+    left: 24px;
+    top: 0px;
+    border-radius: 5px;
+    padding: 12px 32px 12px 32px;
+}
+
+.filtros .search {
+    background-color: #FFFFFF;
+    display: flex; 
+    align-items: center;
+    gap: 10px;
+    border: none;
+    height: 5px;
+    width: 900px;
+    left: 175px;
+    top: 0px;
+    border-radius: 8px;
+    padding: 24px;
+    border: 0.7px solid #E3E3E3;
+    box-shadow: 0px 4px 16px rgba(22, 22, 22, 0.1);
+    border-radius: 8px;
+    
+}
+
+.filtros .search input{
+    background-color: transparent;
+    border: none;
+    width: 80%;
+    outline: 2px solid white;
+}
+
+
+.cards {
+    margin-top: 32px;
+    display: flex;
+    gap: 30px;
+}
+
+.titulo h2 {
+
+    color: #403937;
+    font-weight: 700;
+    font-family: 'Inter';
+}
+.lista-de-cards {
+    display: flex;
+    flex-direction: column;
+   
+}
+
+.lista-de-cards .card {
+    margin-top: 24px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 16px #EAE2FD;
+    border-radius: 8px;
+    align-self: stretch;
+
+    width: 300px;
+    height: 110px;
+
+    padding: 24px;
+}
+
+.lista-de-cards .card .titulo-do-card {
+
+    margin-bottom: 10px;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color:#403937;
+}
+
+.lista-de-cards .card .descricao {
+
+    margin-bottom: 10px;
+    color: #756966;
+  
+}
+
+.lista-de-cards .card .tags {
+    display: flex;
+     flex-direction: row;
+     gap: 8px;
+     
+     
+}
+
+.lista-de-cards .card .tags span{
+   
+    color: #7C3AED;
+    background-color: #E2D6FF;
+    padding: 5px;
+    border-radius: 8px;
+    width: fit-content;
+     
 }
